--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -2,15 +2,15 @@
 
   <div id="timeline">
     <div class="line main" style="height: 500px; left: 0px;">
-      <div class="point" style="top: 10px;">
+      <div class="point" style="top: 10px;" data-event="1">
         <div></div>
       </div>
 
-      <div class="point" style="top: 160px;">
+      <div class="point" style="top: 160px;" data-event="2">
         <div></div>
       </div>
 
-      <div class="point" style="top: 450px;">
+      <div class="point" style="top: 450px;" data-event="3">
         <div></div>
       </div>
 
@@ -30,7 +30,7 @@
   <div class="row">
     <div class="span1">&nbsp;</div>
     <div id="events" class="span10">
-      <div class="event">
+      <div class="event" id="event-1">
         <h2><a href="#">Prenájom majetku</a><br><span class="label success">Oznam</span></h2>
 
         <div class="content">
@@ -45,7 +45,7 @@
             Bratislave Rodinnému centru Dlháčik.</p>
         </div>
       </div>
-      <div class="event">
+      <div class="event" id="event-2">
         <h2><a href="#">Stratené hodinky</a><br><span class="label important">Straty a nálezy</span></h2>
 
         <div class="content">
@@ -55,7 +55,7 @@
             tomto termíne, v zmysle platnej legislatívy, pripadne vec do vlastníctva štátu.</p>
         </div>
       </div>
-      <div class="event">
+      <div class="event" id="event-3">
         <h2><a href="#">Parkovanie pri Terne</a><br><span class="label notice">Doprava</span></h2>
 
         <div class="content">
