--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -2,15 +2,15 @@
 
   <div id="timeline">
     <div class="line main" style="height: 500px; left: 0px;">
-      <div class="point" style="top: 10px;">
+      <div class="point" style="top: 10px;" data-event="1">
         <div></div>
       </div>
 
-      <div class="point" style="top: 160px;">
+      <div class="point" style="top: 160px;" data-event="2">
         <div></div>
       </div>
 
-      <div class="point" style="top: 450px;">
+      <div class="point" style="top: 450px;" data-event="3">
         <div></div>
       </div>
 
@@ -30,7 +30,7 @@
   <div class="row">
     <div class="span1">&nbsp;</div>
     <div id="events" class="span10">
-      <div class="event">
+      <div id="event-1" class="event">
         <h2><span class="label">14. decembra</span> <span class="label notice">Oznam</span><br><a href="#">Prenájom majetku</a></h2>
 
         <div class="content">
@@ -45,7 +45,7 @@
             Bratislave Rodinnému centru Dlháčik.</p>
         </div>
       </div>
-      <div class="event">
+      <div id="event-2" class="event">
         <h2><span class="label">13. decembra</span> <span class="label important">Straty a nálezy</span><br><a href="#">Stratené hodinky</a></h2>
 
         <div class="content">
@@ -58,7 +58,7 @@
           <p><a class="like" href=""></a> <a class="dislike" href=""></a> <a href="#" class="comments add">Pridať komentár</a> </p>
         </div>
       </div>
-      <div class="event">
+      <div id="event-3" class="event">
         <div class="header">
           <p class="tags"><span class="label notice">Doprava</span></p>
           <h2><a href="#">Parkovanie pri Terne</a></h2>
