--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -155,6 +155,14 @@ $timelineColor: #DCEAF4;
         height: 80px;
         margin-bottom: 15px;
       }
+      .author {
+        a {
+          color: gray;
+          text-decoration: underline;
+        }
+        color: gray;
+        font-size: smaller;
+      }
     }
   }
 }
