--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -77,11 +77,11 @@
           <div class="comments">
             <div class="comment">
               <div class="user"><%= gravatar_for('johno@jsmf.net', 40) %></div>
-              <div class="content"><p>Toto fakt nie!</p></div>
+              <div class="content"><p>Toto fakt nie!</p><span class="author"><a href="#"><a href="#">Ján Suchal</a></span></div>
             </div>
             <div class="comment">
               <div class="user"><%= gravatar_for('kramas.tomas@gmail.com', 40) %></div>
-              <div class="content"><p>Tak som sa ponahlal ne?</p></div>
+              <div class="content"><p>Tak som sa ponahlal ne?</p><span class="author"><a href="#">Tomáš Kramár</a></span></div>
             </div>
             <div class="comment">
               <div class="user"><%= gravatar_for('johno@jsmf.net', 40) %></div>
