--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -55,7 +55,17 @@
             tomto termíne, v zmysle platnej legislatívy, pripadne vec do vlastníctva štátu.</p>
         </div>
         <div class="interactions">
-          <p><a class="like" href=""></a> <a class="dislike" href=""></a> <a href="#" class="comments add">Pridať komentár</a> </p>
+          <p><a class="like" href=""></a> <a class="dislike" href=""></a> <a href="javascript:void" class="comments add" data-toggle-id="comments-5">Pridať komentár</a> </p>
+          <div class="comments" id="comments-5" style="display: none;">
+            <div class="comment">
+              <div class="user"><%= gravatar_for('johno@jsmf.net', 40) %></div>
+              <div class="content">
+                <%= text_area_tag :comment %>
+                <br>
+                <%= submit_tag 'Odoslať', class: 'btn primary' %>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div id="event-3" class="event">
