Keep timeline in view

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -6,6 +6,7 @@ $timelineColor: #DCEAF4;
 
 #timeline {
   position: relative;
+  float: left;
   .line {
     position: absolute;
     border-radius: 3px;
