--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -101,6 +101,51 @@
           </div>
         </div>
       </div>
+      <div id="event-4" class="event">
+        <h2><span class="label">14. decembra</span> <span class="label notice">Oznam</span><br><a href="#">Prenájom majetku</a></h2>
+
+        <div class="content">
+          <p>Mestská časť Bratislava Karlova Ves oznamuje zámer prenajať majetok z dôvodu hodného osobitného zreteľa v
+            zmysle § 9a ods. 9, písm. c) zákona č. 138/1991 Zb. o majetku obcí v znení neskorších predpisov:</p>
+
+          <p>Poskytnutie nebytových priestorov v Karloveskom centre kultúry na Molecovej 2 v Bratislave Folklórnemu
+            súboru
+            Dolina, o. z. s vecným plnením v zmysle dohody o spolupráci.</p>
+
+          <p>2. Prenájom nebytových priestorov v Základnej škole A. Dubčeka, na prízemí budovy na Majerníkovej 60 v
+            Bratislave Rodinnému centru Dlháčik.</p>
+        </div>
+      </div>
+      <div id="event-5" class="event">
+        <h2><span class="label">13. decembra</span> <span class="label important">Straty a nálezy</span><br><a href="#">Stratené hodinky</a></h2>
+
+        <div class="content">
+          <p>Dňa 14.09.2011 bola Obvodnému úradu Bratislava (Okresným riaditeľstvom PZ v Bratislave IV, OO PZ Bratislava
+            IV – Karlova Ves, Bratislava) odovzdaná vec (ktorej vlastník nie je známy). Informácie za účelom ustálenia
+            opustenej veci poskytne Bc. Turanská, tel.: 02/59312397. Opustenú vec je možné prevziať do 15.03.2012. Po
+            tomto termíne, v zmysle platnej legislatívy, pripadne vec do vlastníctva štátu.</p>
+        </div>
+        <div class="interactions">
+          <p><a class="like" href=""></a> <a class="dislike" href=""></a> <a href="#" class="comments add">Pridať komentár</a> </p>
+        </div>
+      </div>
+      <div id="event-6" class="event">
+        <div class="header">
+          <p class="tags"><span class="label notice">Doprava</span></p>
+          <h2><a href="#">Parkovanie pri Terne</a></h2>
+          <p class="info">13. decembra 2011</p>
+        </div>
+
+        <div class="content">
+          <div class="image">
+            <img src="images/debil.jpg" alt="">
+          </div>
+        </div>
+        <div class="interactions">
+          <p><a class="like" href="">10</a> <a class="dislike" href="">1</a> <a href="#" class="comments many">5 komentárov</a>
+            <a class="watch" href="#">sledovať</a></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
