--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -1,32 +1,25 @@
 <div class="container">
 
   <div id="timeline">
-    <div class="line main" style="height: 500px; left: 0px;">
-      <div class="point" style="top: 10px;" data-event="1">
-        <div></div>
-      </div>
-
-      <div class="point" style="top: 160px;" data-event="2">
-        <div></div>
-      </div>
-
-      <div class="point" style="top: 450px;" data-event="3">
-        <div></div>
-      </div>
-
-      <div></div>
+    <%
+      lines, points = timelineize(@events)
+    %>
+    <div class="line main" style="height: 800px; left: 0;">
+      <% points.each do |point| %>
+          <% event, start = point %>
+          <div class="point" style="top: <%= start %>px;" data-event="<%= event.id %>">
+            <div></div>
+          </div>
+      <% end %>
     </div>
-    <div class="line" style="top: 150px; height: 50px; left: -18px;">
-      <div></div>
-    </div>
-    <div class="line culture" style="top: 100px; height: 300px; left: -9px;">
-      <div></div>
-    </div>
-    <div class="line" style="top: 300px; height: 20px; left: -18px;">
-      <div></div>
-    </div>
-
+    <% lines.each do |line| %>
+        <% event, depth, start, length = line %>
+        <div class="line" style="height: <%= length %>px; top: <%= start %>px; left: -<%= depth*9 %>px;" data-event="#{event.id">
+          <div></div>
+        </div>
+    <% end %>
   </div>
+
   <div class="row">
     <div class="span1">&nbsp;</div>
     <div id="events" class="span10">
