Highlight events on point hover

--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -7,10 +7,10 @@
     <div class="line main" style="height: 2000px; left: 0;">
       <% points.each do |point| %>
           <%
-             event, start, cardinality = point
+             events, start, cardinality = point
              klass = cardinality > 1 ? :more : nil
           %>
-          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= event.id %>" title="<%= cardinality %>">
+          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= events.collect(&:id).join(',') %>" title="<%= cardinality %>">
             <div><% if cardinality > 1 %><%= cardinality %><% else %>&nbsp;<% end %></div>
           </div>
       <% end %>
