--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -10,14 +10,17 @@
              event, start, cardinality = point
              klass = cardinality > 1 ? :more : nil
           %>
-          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= event.id %>" title="<%= cardinality %>">
+          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= event.id %>">
             <div><% if cardinality > 1 %><%= cardinality %><% else %>&nbsp;<% end %></div>
           </div>
       <% end %>
     </div>
     <% lines.each do |line| %>
-        <% event, depth, start, length = line %>
-        <div class="line" style="height: <%= length %>px; top: <%= start %>px; left: -<%= depth*18+7 %>px;" data-event="<%= event.id %>">
+        <%
+           event, depth, start, length = line
+           type = event.category
+        %>
+        <div class="line <%= type %>" style="height: <%= length %>px; top: <%= start %>px; left: -<%= depth*18+7 %>px;" data-event="<%= event.id %>">
           <div></div>
         </div>
     <% end %>
@@ -30,7 +33,7 @@
   </div>
 
   <div class="row">
-    <div class="span1">&nbsp;</div>
+    <div class="span4">&nbsp;</div>
     <div id="events" class="span10">
       <div id="event-1" class="event">
         <h2><span class="label">14. decembra</span> <span class="label notice">Oznam</span><br><a href="#">Prenájom majetku</a></h2>
