--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -123,7 +123,7 @@ $timelineColor: #DCEAF4;
   }
 
   .content {
-    adding: 0 20px;
+    padding: 0 20px;
     .image {
       text-align: center;
     }
