--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -88,6 +88,7 @@ $timelineColor: #DCEAF4;
     color: #d3d3d3;
     font-weight: bolder;
     -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
   }
 
   div .Review div {
