--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -10,7 +10,7 @@
              events, start, cardinality = point
              klass = cardinality > 1 ? :more : nil
           %>
-          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= events.collect(&:id).join(',') %>" title="<%= cardinality %>">
+          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= events.collect(&:id).join(',') %>">
             <div><% if cardinality > 1 %><%= cardinality %><% else %>&nbsp;<% end %></div>
           </div>
       <% end %>
