--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -21,7 +21,7 @@ h2 {
     background-color: $timelineColor;
     width: 5px;
 
-    &:hover {
+    &:hover, &.active {
       cursor: pointer;
       margin-left: -2px;
       width: 9px;
