--- a/app/views/events/_review.html.erb
+++ b/app/views/events/_review.html.erb
@@ -1,6 +1,6 @@
 <div id="event-<%= event.id %>" class="event">
   <div class="header">
-    <p class="tags"><span class="label notice">Recenzie</span></p>
+    <p class="tags"><span class="label category<%= event.category %>">Recenzie</span></p>
     <h2><a href="#"><%= event.title %></a></h2>
     <p class="info"><%= event.published_at %></p>
   </div>
