--- a/app/views/events/_grant.html.erb
+++ b/app/views/events/_grant.html.erb
@@ -1,6 +1,6 @@
 <div id="event-<%= event.id %>" class="event">
   <div class="header">
-    <p class="tags"><span class="label notice">Granty</span></p>
+    <p class="tags"><span class="label category<%= event.category %>">Granty</span></p>
     <h2><a href="#"><%= event.title %></a></h2>
     <p class="info"><%= event.published_at %></p>
     <p class="info">Rozpočet: <%= number_to_currency(event.detailed.budget, :unit => "&euro;", :delimiter => ' ', :format => "%n&nbsp;%u", :precision => 0) %></p>
