--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
       <ul class="nav">
         <li><%= link_to 'Médiá', timeline_index_path(:category => 'Media') %></li>
         <li><%= link_to 'Recenzie', timeline_index_path(:category => 'Review') %></li>
+        <li><%= link_to 'Granty', timeline_index_path(:category => 'Grant') %></li>
+        <li><%= link_to 'Zľavy', timeline_index_path(:category => 'Discount') %></li>
       </ul>
     </div>
   </div>
