--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -16,12 +16,23 @@ h2 {
   position: relative;
   left: 240px;
   .line {
+    -webkit-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+             -moz-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+              -ms-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+               -o-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+                  transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000); /* ease (default) */
+
     position: absolute;
     border-radius: 3px;
     background-color: $timelineColor;
     width: 5px;
 
     &:hover, &.active {
+      -webkit-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+         -moz-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+          -ms-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+           -o-transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000);
+              transition: all 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000); /* ease (default) */
       cursor: pointer;
       margin-left: -2px;
       width: 9px;
