Add more categories to top menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
         <li><%= link_to 'Recenzie', timeline_index_path(:category => 'Review') %></li>
         <li><%= link_to 'Granty', timeline_index_path(:category => 'Grant') %></li>
         <li><%= link_to 'Zľavy', timeline_index_path(:category => 'Discount') %></li>
+        <li><%= link_to 'Straty & Nálezy', timeline_index_path(:category => 'Lost_and_Found') %></li>
+        <li><%= link_to 'Miestni poslanci', timeline_index_path(:category => 'Deputies') %></li>
+        <li><%= link_to 'Sťažnosti', timeline_index_path(:category => 'Complaints') %></li>
+        <li><%= link_to 'Oznamy', timeline_index_path(:category => 'Info') %></li>
+        <li><%= link_to 'Kriminalita', timeline_index_path(:category => 'Crime') %></li>
+        <li><%= link_to 'Dražby', timeline_index_path(:category => 'Auctions') %></li>
       </ul>
     </div>
   </div>
