--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
 </div>
 
 <div class="top-main">
+  <a href="#" class="btn large primary action-button">Pridaj udalosť</a>
   <%= yield %>
 </div>
 
