Add images to discounts

--- a/app/views/events/_discount.html.erb
+++ b/app/views/events/_discount.html.erb
@@ -6,6 +6,7 @@
   </div>
 
   <div class="content">
+    <%= image_tag "/images/#{event.image_path}", :size => "174x116"%>
     <%= simple_format(truncate(event.message, :length => 500)) %>
   </div>
   <%= render 'events/interactions', :event => event %>
