--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -9,8 +9,15 @@
           <%
              events, start, cardinality = point
              klass = cardinality > 1 ? :more : "category#{events.first.category}"
+             content = events.collect { |e| "<li>#{e.title}</li>" }.join
+             if events.size > 1
+               in_period = "v období #{l events.first.published_at, :format => :short} &mdash; #{l events.last.published_at, :format => :short}"
+             else
+               in_period = "dňa #{l events.first.published_at}"
+             end
+             title = "#{slovak_pluralize(cardinality, 'udalosť', "udalosti", "udalostí")} #{in_period}"
           %>
-          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= events.collect(&:id).join(',') %>">
+          <div class="point <%= klass %>" style="top: <%= start %>px;" data-event="<%= events.collect(&:id).join(',') %>" title="<%= title %>" rel="popover" data-content="<ul><%= content %></ul>">
             <div><% if cardinality > 1 %><%= cardinality %><% else %>&nbsp;<% end %></div>
           </div>
       <% end %>
@@ -19,7 +26,7 @@
         <%
            event, depth, start, length = line
         %>
-        <div class="line category<%= event.category %>" style="height: <%= length %>px; top: <%= start %>px; left: -<%= depth*18+7 %>px;" data-event="<%= event.id %>">
+        <div class="line category<%= event.category %>" style="height: <%= length %>px; top: <%= start %>px; left: -<%= depth*18+7 %>px;" data-event="<%= event.id %>" rel="popover" data-content="<%= event.title %>" title="<%= l event.valid_from, :format => :short %> &mdash; <%= l event.valid_to, :format => :short %>">
           <div></div>
         </div>
     <% end %>
