--- a/app/views/events/_grant.html.erb
+++ b/app/views/events/_grant.html.erb
@@ -2,8 +2,7 @@
   <div class="header">
     <p class="tags"><span class="label category<%= event.category %>">Granty</span></p>
     <h2><a href="#"><%= event.title %></a></h2>
-    <p class="info"><%= l event.published_at, :format => :short %></p>
-    <p class="info">Rozpočet: <%= number_to_currency(event.detailed.budget, :unit => "&euro;", :delimiter => ' ', :format => "%n&nbsp;%u", :precision => 0) %></p>
+    <p class="info"><%= l event.published_at, :format => :short %> <strong class="money">Rozpočet:</strong> <%= number_to_currency(event.detailed.budget, :unit => "&euro;", :delimiter => ' ', :format => "%n&nbsp;%u", :precision => 0) %></p>
   </div>
 
   <div class="content">
