--- a/app/views/events/_interactions.html.erb
+++ b/app/views/events/_interactions.html.erb
@@ -1,5 +1,11 @@
 <div class="interactions">
-  <p><a class="like" href=""></a> <a class="dislike" href=""></a> <a href="javascript:void" class="comments add" data-toggle-id="comments-<%= event.id %>">Pridať komentár</a> </p>
+  <p><a class="like" href=""></a>
+    <a class="dislike" href=""></a>
+    <a href="#" class="comments add" data-toggle-id="comments-<%= event.id %>">Pridať komentár</a>
+    <% if event.location_label %>
+      <a href="#" class="map add" data-toggle-id="map-<%= event.id %>" data-map-id="<%= event.id %>" data-map-location="<%= event.location_label %>, Bratislava">Ukázať mapu</a>
+    <% end %>
+  </p>
   <div class="comments" id="comments-<%= event.id %>" style="display: none;">
     <div class="comment">
       <div class="user"><%= gravatar_for('johno@jsmf.net', 40) %></div>
@@ -9,5 +15,8 @@
         <%= submit_tag 'Odoslať', class: 'btn primary' %>
       </div>
     </div>
-  </div> 
+  </div>
+  <div class="map" id="map-<%= event.id %>" style="display: none;">
+    <%= render 'events/map', :event => event%>
+  </div>
 </div>
