--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,6 +1,1 @@
-<script type="text/javascript">
-  google.maps.event.addDomListener(window, 'load', function(){
-        little_map('map_canvas_<%= event.id%>', 48, 17);
-    });
-</script>
-<div id="map_canvas_<%= event.id%>" style="height:200px;width:200px"></div>
+<div id="map_canvas_<%= event.id%>" style="height:200px;width:100%;"></div>
