--- a/app/views/events/_interactions.html.erb
+++ b/app/views/events/_interactions.html.erb
@@ -3,7 +3,7 @@
     <a class="dislike" href=""></a>
     <a href="#" class="comments add" data-toggle-id="comments-<%= event.id %>">Pridať komentár</a>
     <% if event.location_label %>
-      <a href="#" class="map add" data-toggle-id="map-<%= event.id %>" data-map-id="<%= event.id %>" data-map-location="<%= event.location_label %>, Bratislava">Ukázať mapu</a>
+      <a href="#" class="map add" data-toggle-id="map-<%= event.id %>" data-map-id="<%= event.id %>" data-map-location="<%= event.location_label %>">Ukázať mapu</a>
     <% end %>
   </p>
   <div class="comments" id="comments-<%= event.id %>" style="display: none;">
