--- a/app/views/events/_interactions.html.erb
+++ b/app/views/events/_interactions.html.erb
@@ -2,9 +2,6 @@
   <p><a class="like" href=""></a>
     <a class="dislike" href=""></a>
     <a href="#" class="comments add" data-toggle-id="comments-<%= event.id %>">Pridať komentár</a>
-    <% if event.location_label %>
-      <a href="#" class="map add" data-toggle-id="map-<%= event.id %>" data-map-id="<%= event.id %>" data-map-location="<%= event.location_label %>">Ukázať mapu</a>
-    <% end %>
   </p>
   <div class="comments" id="comments-<%= event.id %>" style="display: none;">
     <div class="comment">
@@ -16,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="map" id="map-<%= event.id %>" style="display: none;">
+  <div class="map" id="map-<%= event.id %>" data-map-id="<%= event.id %>" data-map-location="<%= event.location_label %>" data-map-location-lon="<%= event.lng %>" data-map-location-lat="<%= event.lat %>">
     <%= render 'events/map', :event => event%>
   </div>
 </div>
