--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Everyblock</title>
+  <title>okolomna.sk</title>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
